apps/overlays/dev/frontend-tls-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
    - hosts:
        - ecommerce-dev.localhost
      secretName: ecommerce-dev-localhost-tls
